<resources>
    <string name="app_name">WiseWallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wise Wallet</string>
    <string name="nav_header_subtitle">Developed by: Dev P, Daniel S, David A, Connor K</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">ChatBot</string>
    <string name="menu_budget">Budget</string>
    <string name="transfer_header">Transfer Money</string>
    <string name="transfer_amount_hint">20.00</string>
    <string name="transfer_button_label">Transfer</string>
    <string name="transfer_from_label">From</string>
    <string name="transfer_to_label">To</string>
    <string name="dollar_sign">$</string>
    <string name="menu_transfer">Transfer</string>


    <string name="month_year">March 2024</string>
    <string name="totalBudget">Total Budget</string>
    <string name="Rent">Rent</string>
    <string name="Grub">Grub</string>
    <string name="Car">Car</string>
    <string name="Entertainment">Entertainment</string>
    <string name="Other">Other</string>

    <string name="spentTotalBudget">Spent: ____</string>
    <string name="spentRent">Spent: ____</string>
    <string name="spentGrub">Spent: ____</string>
    <string name="spentCar">Spent: ____</string>
    <string name="spentEntertainment">Spent: ____</string>
    <string name="spentOther">Spent: ____</string>

    <string name="budgetTotalBudget">Budget: ____</string>
    <string name="budgetRent">Budget: ____</string>
    <string name="budgetGrub">Budget: ____</string>
    <string name="budgetCar">Budget: ____</string>
    <string name="budgetEntertainment">Budget: ____</string>
    <string name="budgetOther">Budget: ____</string>

    <string name="purchases">Purchases</string>
    <string name="search">Search</string>
    <string name="filter_by">Filter by:</string>
    <string name="amount">Amount:</string>
    <string name="category">Category:</string>
    <string name="account_card">Account/Card:</string>
    <string name="dates">Dates:</string>

</resources>